--- a/flexbox/3-index.html
+++ b/flexbox/3-index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -7,7 +8,7 @@
     <meta name="description" content="Description of the page less than 150 characters" />
     <link rel="icon" type="image/png" href="images/favicon.jpg" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="0-styles.css" />
+    <link rel="stylesheet" href="3-styles.css" />
   </head>
   <body>
     <!-- Header -->
@@ -59,7 +60,7 @@
         </div>
       </section>
       <!-- Services section -->
-      <section id="services" class="section">
+      <section id="services" class="section section-services">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Services</h2>
@@ -82,8 +83,6 @@
                   <h3 class="card-title"><a href="#">Content Strategy</a></h3>
                 </div>
               </li>
-            </ul>
-            <ul class="row">
               <li class="col-1-3">
                 <div class="card-services">
                   <h3 class="card-title"><a href="#">UX Design</a></h3>
@@ -104,7 +103,7 @@
         </div>
       </section>
       <!-- Works section -->
-      <section id="works" class="section" data-section-theme="dark">
+      <section id="works" class="section section-works" data-section-theme="dark">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Works</h2>
@@ -153,7 +152,7 @@
         </div>
       </section>
       <!-- About Us section -->
-      <section id="about" class="section">
+      <section id="about" class="section section-about-us">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">About Us</h2>
@@ -189,7 +188,7 @@
         </div>
       </section>
       <!-- Latest news section -->
-      <section id="latest_news" class="section">
+      <section id="latest_news" class="section section-latest-news">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Latest News</h2>
@@ -240,7 +239,7 @@
         </div>
       </section>
       <!-- Testimonials section -->
-      <section id="testimonial" class="section">
+      <section id="testimonial" class="section section-testimonial">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Testimonials</h2>
@@ -286,7 +285,7 @@
         </div>
       </section>
       <!-- Contact section -->
-      <section id="contact" class="section">
+      <section id="contact" class="section section-contact">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Contact</h2>
