--- a/flexbox/2-index.html
+++ b/flexbox/2-index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Description of the page less than 150 characters" />
     <link rel="icon" type="image/png" href="images/favicon.jpg" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="0-styles.css" />
+    <link rel="stylesheet" href="2-styles.css" />
   </head>
   <body>
     <!-- Header -->
@@ -59,7 +59,7 @@
         </div>
       </section>
       <!-- Services section -->
-      <section id="services" class="section">
+      <section id="services" class="section section-services">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Services</h2>
@@ -104,7 +104,7 @@
         </div>
       </section>
       <!-- Works section -->
-      <section id="works" class="section" data-section-theme="dark">
+      <section id="works" class="section section-works" data-section-theme="dark">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Works</h2>
@@ -153,7 +153,7 @@
         </div>
       </section>
       <!-- About Us section -->
-      <section id="about" class="section">
+      <section id="about" class="section section-about-us">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">About Us</h2>
@@ -189,7 +189,7 @@
         </div>
       </section>
       <!-- Latest news section -->
-      <section id="latest_news" class="section">
+      <section id="latest_news" class="section section-latest-news">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Latest News</h2>
@@ -240,7 +240,7 @@
         </div>
       </section>
       <!-- Testimonials section -->
-      <section id="testimonial" class="section">
+      <section id="testimonial" class="section section-testimonial">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Testimonials</h2>
@@ -286,7 +286,7 @@
         </div>
       </section>
       <!-- Contact section -->
-      <section id="contact" class="section">
+      <section id="contact" class="section section-contact">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Contact</h2>
