--- a/form/05-article.html
+++ b/form/05-article.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="icon" type="image/png" href="/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="05-styles.css">
+    <link rel="stylesheet" href="04-styles.css">
   </head>
   <body>
     <form action="#" method="post">
@@ -19,9 +19,7 @@
           <div class="form-field">
             <span class="form-field-container">
               <input type="text" name="your-first-name" id="your-first-name" placeholder="e.g. Mike" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="35" autocomplete="on" accesskey="f" required>
-              <i class="form-field-icon"></i>
             </span>
-            <p class="form-help">First name should be at least 3 characters and only contains letters</p>
           </div>
         </div>
         <div class="form-group col-1-2">
@@ -29,9 +27,7 @@
           <div class="form-field">
             <span class="form-field-container">
               <input type="text" name="your-last-name" id="your-last-name" placeholder="e.g. Smith" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="40" autocomplete="on" accesskey="l" required>
-              <i class="form-field-icon"></i>
             </span>
-            <p class="form-help">Last name should be at least 3 characters and only contains letters</p>
           </div>
         </div>
         <div class="form-group col-2-3">
@@ -39,7 +35,6 @@
           <div class="form-field">
             <span class="form-field-container">
               <input type="email" name="your-email" id="your-email" placeholder="e.g. youremail@gmail.com" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" maxlength="55" autocomplete="on" accesskey="e" required>
-              <i class="form-field-icon"></i>
             </span>
           </div>
         </div>
@@ -51,9 +46,7 @@
           <div class="form-field">
             <span class="form-field-container">
               <input type="text" name="your-title" id="your-title" placeholder="e.g. I loved that article" pattern="[A-Za-zÀ-ž\s]{4,}" maxlength="75" autocomplete="on" accesskey="t" required>
-              <i class="form-field-icon"></i>
             </span>
-            <p class="form-help">Title should be at least 4 characters and only contains letters</p>
           </div>
         </div>
         <div class="form-group col-2-3">
@@ -61,9 +54,7 @@
           <div class="form-field">
             <span class="form-field-container">
               <textarea name="your-comment" id="your-comment" placeholder="Write your comment here" minlength="10" accesskey="c" required rows="6" cols="30"></textarea>
-              <i class="form-field-icon"></i>
             </span>
-            <p class="form-help">Comment should be at least 10 characters</p>
           </div>
         </div>
         <div class="form-group">
@@ -170,7 +161,41 @@
                                 <label for="your-first-name">First Name</label>
                                 <div class="form-field">
                                     <span class="form-field-container"><input type="text" name="your-first-name" id="your-first-name" placeholder="e.g. Mike" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="35" autocomplete="on" accesskey="f" required></span>
-                                </div>
+                                <!-- Inside the form-field-container after each input -->
+                    <i class="form-field-icon"></i>
+
+<!-- Inside the first fieldset -->
+<div class="form-field">
+    <span class="form-field-container">
+        <input type="text" name="your-first-name" id="your-first-name" placeholder="e.g. Mike" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="35" autocomplete="on" accesskey="f" required>
+    </span>
+    <!-- Add this paragraph after the closing span tag -->
+    <p class="form-help">First name should be at least 3 characters and only contains letters</p>
+</div>
+<div class="form-field">
+    <span class="form-field-container">
+        <input type="text" name="your-last-name" id="your-last-name" placeholder="e.g. Smith" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="40" autocomplete="on" accesskey="l" required>
+    </span>
+    <!-- Add this paragraph after the closing span tag -->
+    <p class="form-help">Last name should be at least 3 characters and only contains letters</p>
+</div>
+<!-- No changes in the third form-field -->
+
+<!-- Inside the second fieldset -->
+<div class="form-field">
+    <span class="form-field-container">
+        <input type="text" name="your-title" id="your-title" placeholder="e.g. I loved that article" pattern="[A-Za-zÀ-ž\s]{4,}" maxlength="75" autocomplete="on" accesskey="t" required>
+    </span>
+    <!-- Add this paragraph after the closing span tag -->
+    <p class="form-help">Title should be at least 4 characters and only contains letters</p>
+</div>
+< class="form-field">
+    <span class="form-field-container">
+        <textarea name="your-comment" id="your-comment" placeholder="Write your comment here" minlength="10" accesskey="c" required rows="6" cols="30"></textarea>
+    </span>
+    <!-- Add this paragraph after the closing span tag -->
+    <p class="form-help">Comment should be at least 10 characters</p>
+  </div>
                             </div>
                             <div class="form-group col-1-2">
                                 <label for="your-last-name">Last Name</label>
